fix style overflow

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   background-color: rgb(33, 28, 60) !important;
   height: 100vh;
-  overflow: hidden;
 }
 
 .navbar-brand {
